; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_lcs.c_lcs_dev_recover_store.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/net/extr_lcs.c_lcs_dev_recover_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.lcs_card = type { i64 }

@EINVAL = common dso_local global i64 0, align 8
@DEV_STATE_UP = common dso_local global i64 0, align 8
@EPERM = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*, i64)* @lcs_dev_recover_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @lcs_dev_recover_store(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.device*, align 8
  %7 = alloca %struct.device_attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.lcs_card*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %6, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %13 = load %struct.device*, %struct.device** %6, align 8
  %14 = call %struct.lcs_card* @dev_get_drvdata(%struct.device* %13)
  store %struct.lcs_card* %14, %struct.lcs_card** %10, align 8
  %15 = load %struct.lcs_card*, %struct.lcs_card** %10, align 8
  %16 = icmp ne %struct.lcs_card* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %4
  %18 = load i64, i64* @EINVAL, align 8
  %19 = sub i64 0, %18
  store i64 %19, i64* %5, align 8
  br label %39

20:                                               ; preds = %4
  %21 = load %struct.lcs_card*, %struct.lcs_card** %10, align 8
  %22 = getelementptr inbounds %struct.lcs_card, %struct.lcs_card* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @DEV_STATE_UP, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %29

26:                                               ; preds = %20
  %27 = load i64, i64* @EPERM, align 8
  %28 = sub i64 0, %27
  store i64 %28, i64* %5, align 8
  br label %39

29:                                               ; preds = %20
  %30 = load i8*, i8** %8, align 8
  %31 = call i32 @simple_strtoul(i8* %30, i8** %11, i32 16)
  store i32 %31, i32* %12, align 4
  %32 = load i32, i32* %12, align 4
  %33 = icmp eq i32 %32, 1
  br i1 %33, label %34, label %37

34:                                               ; preds = %29
  %35 = load %struct.lcs_card*, %struct.lcs_card** %10, align 8
  %36 = call i32 @lcs_schedule_recovery(%struct.lcs_card* %35)
  br label %37

37:                                               ; preds = %34, %29
  %38 = load i64, i64* %9, align 8
  store i64 %38, i64* %5, align 8
  br label %39

39:                                               ; preds = %37, %26, %17
  %40 = load i64, i64* %5, align 8
  ret i64 %40
}

declare dso_local %struct.lcs_card* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @simple_strtoul(i8*, i8**, i32) #1

declare dso_local i32 @lcs_schedule_recovery(%struct.lcs_card*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
